Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18915

(lov_cl_internal.h:364:lov_entry()) ASSERTION( i < lov->u.composite.lo_entry_count ) failed: [xxx:xx:xx] entry 1, entry_count 1

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      During lov lock init, it's possible that lock's host object is different from the object for current IO, which could cause the component iteration upon different layouts.

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: